--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "express-handlebars": "^2.0.1",
     "express-session": "^1.13.0",
     "handlebars": "^4.0.5",
-    "mongoose": "^4.3.7"
+    "mongodb": "^2.1.4",
+    "mongoose": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
